se realiza cambios de iconos

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         </ul>
     </div>
         <ul class="list-services">
-            <li><a href="#">Paquetes</a><img src="imagenes/iconos/pasajeroicon.png" alt="pasajero"></li>
-            <li><a href="#">Vuelos</a><img src="imagenes/iconos/agenciaicon.png" alt="agencia"></li>
-            <li><a href="#">Alojamiento</a><img src="imagenes/iconos/hotelicon.png" alt="hotel"></li>
+            <li><a href="#">Paquetes </a><img src="imagenes/iconos/bolsa-de-viaje.png" alt="pasajero"></li>
+            <li><a href="#">Vuelos</a><img src="imagenes/iconos/viajes.png" alt="agencia"></li>
+            <li><a href="#">Alojamiento</a><img src="imagenes/iconos/hotel.png" alt="hotel"></li>
         </ul>
 </section>
 <!--promociones-->
@@ -117,13 +117,12 @@
            <option value="2">Primera clase</option>
        </select>
            <P class="p-form-1">Completa nuestro fomulario y te enviaremos cotizaciones de acuerdo a tus elecciones</P>
-        <button type="submit" class="boton-1">ENVIAR</button>
+        <button type="submit" class="boton-1" onclick="mensaje ()">Enviar</button>
     </form>
-        <div class="title"><h2>Promociones</h2><img src="imagenes/promociones.jpg" alt="promociones"></div>
+    <div class="title"><h2>Promociones</h2><img src="imagenes/promociones.jpg" alt="promociones"></div>
 </section>
 
 <!--localizacion-->
-
     <section class="content-localization" id="localizacion">
     
     <h2 class="title">Ubicacion</h2>
@@ -132,7 +131,7 @@
        líneas 176 y 182; por Ruta 24 (ex 197) desde la Est. José C. Paz
        , las líneas 365, 315, 391, 440, 449 y 749.</p>
     </div>
-    <figure><img class = "localizacion" src="imagenes/ubicacion.jpg" alt="localizacion"></figure>
+   <a href=""><img class = "localizacion" src="imagenes/ubicacion.jpg" alt="localizacion"></a> 
 
    </section>
     
